--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -18,10 +18,10 @@ jobs:
         java-version: '17'
 
     - name: Compile project
-      run: echo $GITHUB_WORKSPACE && cd C2/Backend # && mvn project
+      run: pwd && cd C2/Backend && pwd # && mvn project
 
     - name: Rename resulting jar
-      run: echo $GITHUB_WORKSPACE # && cd C2/Backend && mv target/
+      run: pwd # && cd C2/Backend && mv target/
 
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
