--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -22,6 +22,9 @@ jobs:
 
     - name: Rename resulting jar
       run: cd C2/Backend && mv target/Entropy-1.0-SNAPSHOT-jar-with-dependencies.jar ./Entropy-${{ push.head }}.jar
+    
+    - name: Test
+      run: ls C2/Backend
 
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
