--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -17,15 +17,15 @@ jobs:
         distribution: 'adopt'
         java-version: '17'
 
+    - name: Test
+      run: echo ${{ github.head }}
+
     - name: Compile project
-      run: cd C2/Backend && mvn project
+      run: cd C2/Backend && pwd && mvn project
 
     - name: Rename resulting jar
       run: cd C2/Backend && pwd && mv target/Entropy-1.0-SNAPSHOT-jar-with-dependencies.jar ./Entropy-${{ github.head }}.jar
       
-    
-    - name: Test
-      run: ls C2/Backend
 
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
