--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,6 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Check Hash
-      run: echo "${{ github.ref }}"
+      run: echo "${{ github.head_ref }}"
 
     
