--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -18,11 +18,13 @@ jobs:
         java-version: '17'
 
     - name: Compile project
-      run: cd C2/Backend && pwd && mvn clean install && mvn project
+      run: cd C2/Backend && pwd && mvn clean install > /dev/null && mvn project
 
     - name: Rename resulting jar
       run: cd C2/Backend && pwd && mv target/Entropy-1.0-SNAPSHOT-jar-with-dependencies.jar ./Entropy.jar
       
+    - name: Did it build?
+      run: ls C2/Backend
 
     # - name: Upload Artifact
     #   uses: actions/upload-artifact@v2
