--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.18.x]
-        os: ubuntu-latest
+        os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
