--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -47,15 +47,11 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Build src directory
-      run: cd C2/Frontend && go build ./src
-    
-    - name: Rename src executable
-      run: mv C2/Framework/src C2/Framework/Entropy-Server-Frontend
+      run: cd C2/Frontend && go build -o Entropy-Server-Frontend ./src
     
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: Frontend executable
         path: C2/Frontend/Entropy-Server-Frontend
-
 
