--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Entropy-Server-Backend
+        name: Backend executable
         path: C2/Backend/Entropy-Server-Backend.jar
 
   build-Entropy-Frontend:
