--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -9,28 +9,27 @@ jobs:
 
     steps:
     - name: Clone repo
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '17'
+    
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
 
-    - name: Compile project
-      run: cd C2/Backend && pwd && mvn clean install > /dev/null && mvn package
-
-    - name: Rename resulting jar
-      run: cd C2/Backend && pwd && mv target/Entropy-1.0-SNAPSHOT-jar-with-dependencies.jar ./Entropy-Server-Backend.jar
-      
-    - name: Did it build?
-      run: ls C2/Backend | grep "Entropy-Server-Backend.jar"
-
+    - name: Build with Gradle
+      run: ./gradlew build
+    
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Backend executable
-        path: C2/Backend/Entropy-Server-Backend.jar
+        name: Entropy-Server-Backend
+        path: build/libs/
+
+
 
   build-Entropy-Frontend:
     strategy:
