--- a/C2/Extensions/Example-extension/pom.xml
+++ b/C2/Extensions/Example-extension/pom.xml
@@ -6,7 +6,7 @@
 
     <artifactId>Example-extension</artifactId>
     <groupId>xyz.terrifictable.entropy.extension</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>Example-extension</name>
