--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -55,13 +55,14 @@ jobs:
         path: C2/Frontend/Entropy-Server-Frontend
 
 
-  build-CSBot:
+
+  build-BotCS:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/setup-dotnet@v2
-    with:
-      dotnet-version: 6.0.x
+      with:
+        dotnet-version: 6.0.x
     
     - name: Clone repo
       uses: actions/checkout@v3
@@ -77,7 +78,7 @@ jobs:
       run: cd Bots/Bot-C# && mkdir comp && mv bin/Debug/net6.0/win-x64/publish/Bot-C#.exe ./comp && mv bin/Debug/net6.0/linux-x64/publish/Bot-C# ./comp && mv bin/Debug/net6.0/osx-x64/publish/Bot-C# ./comp && ls ./comp 
 
     - name: Upload Artifacts
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: C#Bot
         path: Bots/Bot-C#/comp/
