--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,4 +1,4 @@
-name: Build Pull Request
+name: Build
 
 on: [push]
 
@@ -23,10 +23,17 @@ jobs:
     - name: Build with Gradle
       run: cd C2/Backend && ./gradlew build
     
+    - name: Rename compiled jars
+      run: rm C2/Backend/build/libs/Backend-1.0.jar && mv C2/Backend/build/libs/Backend-1.0-plain.jar C2/Backend/build/libs/Backend-Dependency-${{ steps.vars.outputs.sha_short }}.jar && mv C2/Backend/build/libs/Backend-1.0-standalone.jar C2/Backend/build/libs/Backend-${{ steps.vars.outputs.sha_short }}.jar
+      # run: rm C2/Backend/build/libs/Backend-1.0.jar && 
+      #      mv C2/Backend/build/libs/Backend-1.0-plain.jar       C2/Backend/build/libs/Backend-Dependency-${{ steps.vars.outputs.sha_short }}.jar &&
+      #      mv C2/Backend/build/libs/Backend-1.0-standalone.jar  C2/Backend/build/libs/Backend-${{ steps.vars.outputs.sha_short }}.jar
+    
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Entropy-Server-Backend
+        name: Entropy Backend
         path: C2/Backend/build/libs/
 
 
@@ -46,12 +53,12 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Build src directory
-      run: cd C2/Frontend && go build -o Entropy-Server-Frontend ./src
+      run: cd C2/Frontend && go build -o Entropy-Server-Frontend-${{ steps.vars.outputs.sha_short }} ./src
     
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: Frontend executable
+        name: Entropy Frontend
         path: C2/Frontend/Entropy-Server-Frontend
 
 
@@ -75,7 +82,7 @@ jobs:
       run: cd Bots/Bot-C# && dotnet publish -r osx-x64 -p:PublishSingleFile=true --self-contained false
 
     - name: Move executables
-      run: cd Bots/Bot-C# && mkdir comp && mv bin/Debug/net6.0/win-x64/publish/Bot-C#.exe ./comp && mv bin/Debug/net6.0/linux-x64/publish/Bot-C# ./comp/Bot-C#-linux && mv bin/Debug/net6.0/osx-x64/publish/Bot-C# ./comp/Bot-C#-osx && ls ./comp 
+      run: cd Bots/Bot-C# && mkdir comp && mv bin/Debug/net6.0/win-x64/publish/Bot-C#.exe ./comp/Bot-C#-${{ steps.vars.outputs.sha_short }}.exe && mv bin/Debug/net6.0/linux-x64/publish/Bot-C# ./comp/Bot-C#-linux-${{ steps.vars.outputs.sha_short }} && mv bin/Debug/net6.0/osx-x64/publish/Bot-C# ./comp/Bot-C#-osx-${{ steps.vars.outputs.sha_short }} && ls ./comp 
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v3
