--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -53,13 +53,13 @@ jobs:
       uses: actions/checkout@v3
     
     - name: Build src directory
-      run: cd C2/Frontend && go build -o Entropy-Server-Frontend-${{ steps.vars.outputs.sha_short }} ./src
+      run: cd C2/Frontend && go build -o ./build/Entropy-Server-Frontend-${{ steps.vars.outputs.sha_short }} ./src
     
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: Entropy Frontend
-        path: C2/Frontend/Entropy-Server-Frontend
+        path: C2/Frontend/build/
 
 
 
