--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -1,6 +1,7 @@
 name: Build
 
-on: [push]
+on:
+  - push
 
 
 jobs:
@@ -11,12 +12,16 @@ jobs:
     - name: Clone repo
       uses: actions/checkout@v2
 
+    - name: Set outputs
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
         distribution: 'adopt'
         java-version: '17'
-    
+
     - name: Grant execute permission for gradlew
       run: cd C2/Backend && chmod +x gradlew
 
@@ -52,6 +57,10 @@ jobs:
     - name: Clone repo
       uses: actions/checkout@v3
     
+    - name: Set outputs
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
     - name: Build src directory
       run: cd C2/Frontend && go build -o ./build/Entropy-Server-Frontend-${{ steps.vars.outputs.sha_short }} ./src
     
@@ -74,6 +83,10 @@ jobs:
     - name: Clone repo
       uses: actions/checkout@v3
     
+    - name: Set outputs
+      id: vars
+      run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+
     - name: Build Linux
       run: cd Bots/Bot-C# && dotnet publish -r linux-x64 -p:PublishSingleFile=true --self-contained false
     - name: Build Windows
