--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -64,6 +64,10 @@ jobs:
     - name: Build src directory
       run: cd C2/Frontend && go build -o ./build/Entropy-Frontend-${{ steps.vars.outputs.sha_short }}-${{ matrix.os }} ./src
     
+    - name: Windows
+      if: ${{ matrix.os == "windows-2022" }}
+      run: mv C2/Frontend/build/Entropy-Frontend-${{ steps.vars.outputs.sha_short }}-${{ matrix.os }} C2/Frontend/build/Entropy-Frontend-${{ steps.vars.outputs.sha_short }}-${{ matrix.os }}.exe
+
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
